--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "tanyaclement",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1213771?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "tanyaclement",
     "is_private": false,
@@ -22,6 +28,7 @@
       "tags": []
     },
     "created_at": "2025-03-03T20:26:28.315Z",
-    "updated_at": "2025-03-03T20:27:45.596Z"
+    "updated_at": "2025-03-03T20:27:45.596Z",
+    "generate_pages_site": true
   }
 }
